# edukate-backend/src/main/kotlin/io/github/sanyavertolet/edukate/backend/dtos/SubmissionDto.kt
@@ -9,5 +9,6 @@ data class SubmissionDto(
     val userName: String,
     val status: SubmissionStatus,
     val createdAt: Instant,
+    val updatedAt: Instant,
     val fileUrls: List<String> = emptyList(),
 )
