# edukate-common/src/main/kotlin/io/github/sanyavertolet/edukate/common/dtos/PageResponse.kt
@@ -1,0 +1,3 @@
+package io.github.sanyavertolet.edukate.common.dtos
+
+data class PageResponse<T>(val content: List<T>, val page: Int, val size: Int, val totalElements: Long, val totalPages: Int)
